// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`cyclus async should wait for start or stop method to resolve 1`] = `
SystemMap {
  "__metadata": Object {
    "cache": Object {
      "@cyclus/SystemMap/BUILT_ORDER": Array [
        "component2",
        "component1",
        "component3",
      ],
    },
  },
  "map": Object {
    "component1": Component1 {
      "__metadata": Object {
        "dependencies": Object {},
        "isInitialised": true,
      },
    },
    "component2": Component2 {
      "__metadata": Object {
        "dependencies": Object {},
        "isInitialised": true,
      },
    },
    "component3": Component3 {
      "__metadata": Object {
        "dependencies": Object {
          "component1": "component1",
          "component2": "component2",
        },
        "isInitialised": true,
      },
      "component1": Component1 {
        "__metadata": Object {
          "dependencies": Object {},
          "isInitialised": true,
        },
      },
      "component2": Component2 {
        "__metadata": Object {
          "dependencies": Object {},
          "isInitialised": true,
        },
      },
    },
  },
}
`;

exports[`cyclus async should wait for start or stop method to resolve 2`] = `
Array [
  "Start component 2 after 2000",
  "Start component 1 after 1000",
  "Start component 3",
]
`;

exports[`cyclus injecting dependencies correctly should work with map 1`] = `
SystemMap {
  "__metadata": Object {
    "cache": Object {
      "@cyclus/SystemMap/BUILT_ORDER": Array [
        "sched",
        "db",
        "exampleComponent",
      ],
    },
  },
  "map": Object {
    "db": Database {
      "__metadata": Object {
        "dependencies": Object {},
        "isInitialised": true,
      },
      "dbConnection": "OPENED",
    },
    "exampleComponent": ExampleComponent {
      "__metadata": Object {
        "dependencies": Object {
          "database": "db",
          "scheduler": "sched",
        },
        "isInitialised": true,
      },
      "database": Database {
        "__metadata": Object {
          "dependencies": Object {},
          "isInitialised": true,
        },
        "dbConnection": "OPENED",
      },
      "scheduler": Scheduler {
        "__metadata": Object {
          "dependencies": Object {},
          "isInitialised": true,
        },
        "tick": 10,
      },
    },
    "sched": Scheduler {
      "__metadata": Object {
        "dependencies": Object {},
        "isInitialised": true,
      },
      "tick": 10,
    },
  },
}
`;

exports[`cyclus lifecycle should start the system in order 1`] = `
Array [
  "Start DummyComponent",
  "Start Scheduler",
  "Start Database",
  "Start ExampleComponent",
]
`;

exports[`cyclus lifecycle should stop the system in reversed order 1`] = `
Array [
  "Start DummyComponent",
  "Start Scheduler",
  "Start Database",
  "Start ExampleComponent",
  "Stop ExampleComponent",
  "Stop Database",
  "Stop Scheduler",
]
`;

exports[`cyclus lifecycle starting should be idempotent 1`] = `
Array [
  "Start DummyComponent",
  "Start Scheduler",
  "Start Database",
  "Start ExampleComponent",
]
`;

exports[`cyclus lifecycle stopping should be idempotent 1`] = `
Array [
  "Start DummyComponent",
  "Start Scheduler",
  "Start Database",
  "Start ExampleComponent",
  "Stop ExampleComponent",
  "Stop Database",
  "Stop Scheduler",
]
`;

exports[`cyclus replacing dependencies on the fly should replace but not start or stop any component 1`] = `
SystemMap {
  "__metadata": Object {
    "cache": Object {},
  },
  "map": Object {
    "database": Database {
      "__metadata": Object {
        "dependencies": Object {},
        "isInitialised": false,
      },
    },
    "exampleComponent": ExampleComponent {
      "__metadata": Object {
        "dependencies": Object {
          "database": "database",
          "scheduler": "scheduler",
        },
        "isInitialised": false,
      },
      "database": Database {
        "__metadata": Object {
          "dependencies": Object {},
          "isInitialised": false,
        },
      },
      "scheduler": Scheduler {
        "__metadata": Object {
          "dependencies": Object {},
          "isInitialised": false,
        },
      },
    },
    "scheduler": Scheduler {
      "__metadata": Object {
        "dependencies": Object {},
        "isInitialised": false,
      },
    },
  },
}
`;

exports[`cyclus replacing dependencies on the fly should replace but not start or stop any component 2`] = `
SystemMap {
  "__metadata": Object {
    "cache": Object {},
  },
  "map": Object {
    "database": NewDatabase {
      "__metadata": Object {
        "dependencies": Object {},
        "isInitialised": false,
      },
    },
    "exampleComponent": ExampleComponent {
      "__metadata": Object {
        "dependencies": Object {
          "database": "database",
          "scheduler": "scheduler",
        },
        "isInitialised": false,
      },
      "database": NewDatabase {
        "__metadata": Object {
          "dependencies": Object {},
          "isInitialised": false,
        },
      },
      "scheduler": Scheduler {
        "__metadata": Object {
          "dependencies": Object {},
          "isInitialised": false,
        },
      },
    },
    "scheduler": Scheduler {
      "__metadata": Object {
        "dependencies": Object {},
        "isInitialised": false,
      },
    },
  },
}
`;

exports[`cyclus replacing dependencies on the fly should replace but not start or stop any component 3`] = `Array []`;

exports[`cyclus replacing dependencies on the fly should restart correctly 1`] = `
SystemMap {
  "__metadata": Object {
    "cache": Object {
      "@cyclus/SystemMap/BUILT_ORDER": Array [
        "scheduler",
        "database",
        "exampleComponent",
      ],
    },
  },
  "map": Object {
    "database": Database {
      "__metadata": Object {
        "dependencies": Object {},
        "isInitialised": true,
      },
      "dbConnection": "OPENED",
    },
    "exampleComponent": ExampleComponent {
      "__metadata": Object {
        "dependencies": Object {
          "database": "database",
          "scheduler": "scheduler",
        },
        "isInitialised": true,
      },
      "database": Database {
        "__metadata": Object {
          "dependencies": Object {},
          "isInitialised": true,
        },
        "dbConnection": "OPENED",
      },
      "scheduler": Scheduler {
        "__metadata": Object {
          "dependencies": Object {},
          "isInitialised": true,
        },
        "tick": 10,
      },
    },
    "scheduler": Scheduler {
      "__metadata": Object {
        "dependencies": Object {},
        "isInitialised": true,
      },
      "tick": 10,
    },
  },
}
`;

exports[`cyclus replacing dependencies on the fly should restart correctly 2`] = `
SystemMap {
  "__metadata": Object {
    "cache": Object {
      "@cyclus/SystemMap/BUILT_ORDER": Array [
        "scheduler",
        "database",
        "exampleComponent",
      ],
    },
  },
  "map": Object {
    "database": NewDatabase {
      "__metadata": Object {
        "dependencies": Object {},
        "isInitialised": true,
      },
      "dbConnection": "OPENED",
    },
    "exampleComponent": ExampleComponent {
      "__metadata": Object {
        "dependencies": Object {
          "database": "database",
          "scheduler": "scheduler",
        },
        "isInitialised": true,
      },
      "database": NewDatabase {
        "__metadata": Object {
          "dependencies": Object {},
          "isInitialised": true,
        },
        "dbConnection": "OPENED",
      },
      "scheduler": Scheduler {
        "__metadata": Object {
          "dependencies": Object {},
          "isInitialised": true,
        },
        "tick": 10,
      },
    },
    "scheduler": Scheduler {
      "__metadata": Object {
        "dependencies": Object {},
        "isInitialised": true,
      },
      "tick": 10,
    },
  },
}
`;

exports[`cyclus replacing dependencies on the fly should restart correctly 3`] = `
Array [
  "Start Scheduler",
  "Start Database",
  "Start ExampleComponent",
  "Stop Database",
  "Start NewDatabase",
]
`;

exports[`cyclus replacing dependencies on the fly should stop components in 'shouldStop' attribute 1`] = `
SystemMap {
  "__metadata": Object {
    "cache": Object {
      "@cyclus/SystemMap/BUILT_ORDER": Array [
        "scheduler",
        "database",
        "exampleComponent",
      ],
    },
  },
  "map": Object {
    "database": Database {
      "__metadata": Object {
        "dependencies": Object {},
        "isInitialised": true,
      },
      "dbConnection": "OPENED",
    },
    "exampleComponent": ExampleComponent {
      "__metadata": Object {
        "dependencies": Object {
          "database": "database",
          "scheduler": "scheduler",
        },
        "isInitialised": true,
      },
      "database": Database {
        "__metadata": Object {
          "dependencies": Object {},
          "isInitialised": true,
        },
        "dbConnection": "OPENED",
      },
      "scheduler": Scheduler {
        "__metadata": Object {
          "dependencies": Object {},
          "isInitialised": true,
        },
        "tick": 10,
      },
    },
    "scheduler": Scheduler {
      "__metadata": Object {
        "dependencies": Object {},
        "isInitialised": true,
      },
      "tick": 10,
    },
  },
}
`;

exports[`cyclus replacing dependencies on the fly should stop components in 'shouldStop' attribute 2`] = `
SystemMap {
  "__metadata": Object {
    "cache": Object {
      "@cyclus/SystemMap/BUILT_ORDER": Array [
        "scheduler",
        "database",
        "exampleComponent",
      ],
    },
  },
  "map": Object {
    "database": NewDatabase {
      "__metadata": Object {
        "dependencies": Object {},
        "isInitialised": true,
      },
      "dbConnection": "OPENED",
    },
    "exampleComponent": ExampleComponent {
      "__metadata": Object {
        "dependencies": Object {
          "database": "database",
          "scheduler": "scheduler",
        },
        "isInitialised": true,
      },
      "database": NewDatabase {
        "__metadata": Object {
          "dependencies": Object {},
          "isInitialised": true,
        },
        "dbConnection": "OPENED",
      },
      "scheduler": Scheduler {
        "__metadata": Object {
          "dependencies": Object {},
          "isInitialised": true,
        },
        "tick": 10,
      },
    },
    "scheduler": Scheduler {
      "__metadata": Object {
        "dependencies": Object {},
        "isInitialised": true,
      },
      "tick": 10,
    },
  },
}
`;

exports[`cyclus replacing dependencies on the fly should stop components in 'shouldStop' attribute 3`] = `
Array [
  "Start Scheduler",
  "Start Database",
  "Start ExampleComponent",
  "Stop Database",
  "Stop Scheduler",
  "Start Scheduler",
  "Start NewDatabase",
]
`;

exports[`cyclus replacing dependencies on the fly should work for some components that are not in system before 1`] = `
SystemMap {
  "__metadata": Object {
    "cache": Object {
      "@cyclus/SystemMap/BUILT_ORDER": Array [
        "emailService",
        "scheduler",
        "newExampleComponent",
        "database",
        "exampleComponent",
      ],
    },
  },
  "map": Object {
    "database": Database {
      "__metadata": Object {
        "dependencies": Object {},
        "isInitialised": true,
      },
      "dbConnection": "OPENED",
    },
    "emailService": EmailService {
      "__metadata": Object {
        "dependencies": Object {},
        "isInitialised": true,
      },
    },
    "exampleComponent": ExampleComponent {
      "__metadata": Object {
        "dependencies": Object {
          "database": "database",
          "scheduler": "scheduler",
        },
        "isInitialised": true,
      },
      "database": Database {
        "__metadata": Object {
          "dependencies": Object {},
          "isInitialised": true,
        },
        "dbConnection": "OPENED",
      },
      "scheduler": Scheduler {
        "__metadata": Object {
          "dependencies": Object {},
          "isInitialised": true,
        },
        "tick": 10,
      },
    },
    "newExampleComponent": NewExampleComponent {
      "__metadata": Object {
        "dependencies": Object {
          "emailService": "emailService",
          "scheduler": "scheduler",
        },
        "isInitialised": true,
      },
      "emailService": EmailService {
        "__metadata": Object {
          "dependencies": Object {},
          "isInitialised": true,
        },
      },
      "scheduler": Scheduler {
        "__metadata": Object {
          "dependencies": Object {},
          "isInitialised": true,
        },
        "tick": 10,
      },
    },
    "scheduler": Scheduler {
      "__metadata": Object {
        "dependencies": Object {},
        "isInitialised": true,
      },
      "tick": 10,
    },
  },
}
`;

exports[`cyclus replacing dependencies on the fly should work for some components that are not in system before 2`] = `
Array [
  "Start Scheduler",
  "Start Database",
  "Start ExampleComponent",
  "Start EmailService",
  "Start NewExampleComponent",
]
`;

exports[`cyclus replacing dependencies on the fly should work for test use case 1`] = `
Array [
  "Start Scheduler",
  "Start NewDatabase",
  "Start ExampleComponent",
]
`;

exports[`cyclus simple component should able to replace the config on the fly 1`] = `
SystemMap {
  "__metadata": Object {
    "cache": Object {},
  },
  "map": Object {
    "component": Component {
      "__metadata": Object {
        "dependencies": Object {
          "config": "config",
        },
        "isInitialised": true,
      },
      "config": Object {
        "c": 3,
        "d": 4,
      },
    },
    "config": Object {
      "c": 3,
      "d": 4,
    },
  },
}
`;

exports[`cyclus simple component should work correctly 1`] = `
SystemMap {
  "__metadata": Object {
    "cache": Object {
      "@cyclus/SystemMap/BUILT_ORDER": Array [
        "config",
        "component",
      ],
    },
  },
  "map": Object {
    "component": Component {
      "__metadata": Object {
        "dependencies": Object {
          "config": "config",
        },
        "isInitialised": true,
      },
      "config": Object {
        "a": 1,
        "b": 2,
      },
    },
    "config": Object {
      "a": 1,
      "b": 2,
    },
  },
}
`;
